--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,7 @@
     <p>Pretty cool, don't you think?</p>
     
     <% if user_signed_in? %>
+        <%= link_to 'List Pins', pins_path, class: 'btn btn-default' %>
         <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: 'btn btn-primary' %>
         <%= link_to 'Edit Profile',  edit_user_registration_path, class: 'btn btn-default' %>
 
