--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -8,17 +8,20 @@
           <%= link_to image_tag(pin.image.url(:medium)), pin %><br/>
           <div class="panel-body">
             <%= pin.desctiption %><br/>
-            <em><%= pin.user.name if pin.user %></em><br/>
-            
+            <strong><%= pin.user.name if pin.user %></strong><br/>
+          </div>  
             <% if pin.user == current_user %>
-          </div>
-            <div class="panel-footer">
-              <%= link_to 'Edit', edit_pin_path(pin) %>
-              <%= link_to 'Delete', pin, method: :delete, data: { confirm: 'Are you sure?' } %><br/>
-            </div>
+              <div class="panel-footer">
+                <%= link_to 'Edit', edit_pin_path(pin) %>
+                <%= link_to 'Delete', pin, method: :delete, data: { confirm: 'Are you sure?' } %><br/>
+              </div>
             <% end %>
         </div>
       </div>
       
     <% end %>
+</div>
+
+<div class="center">
+  <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
 </div>
